import fs from "fs";
import path from "path";
import parseDefineXml from "parser/define.20";
import { MetaDataVersion } from "interfaces/define.xml.20";

describe("Define-XML 2.0 Parser", () => {
    let xmlStringAdam: string;
    let xmlStringSdtm: string;

    beforeAll(() => {
        // Load the sample Define-XML file
        xmlStringAdam = fs.readFileSync(path.join(__dirname, "data/define.adam.20.xml"), "utf-8");
        xmlStringSdtm = fs.readFileSync(path.join(__dirname, "data/define.sdtm.20.xml"), "utf-8");
    });

    it("should parse ODM root and Study", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        expect(defineXml.odm).toBeDefined();
        expect(defineXml.odm.study).toBeDefined();
        expect(defineXml.odm.study.studyOid).toBeTruthy();
        expect(defineXml.odm.study.globalVariables).toBeDefined();
        expect(defineXml.odm.study.metaDataVersion).toBeDefined();
    });

    it("should parse ItemGroupDefs and ItemDefs", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        const mdv = defineXml.odm.study.metaDataVersion;
        expect(mdv.itemGroupDefs).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.itemGroupDefsOrder)).toBe(true);
        expect(mdv.itemDefs).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.itemDefsOrder)).toBe(true);
    });

    it("should parse CodeLists and ValueListDefs", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        const mdv = defineXml.odm.study.metaDataVersion;
        expect(mdv.codeLists).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.codeListsOrder)).toBe(true);
        expect(mdv.valueListDefs).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.valueListDefsOrder)).toBe(true);
    });

    it("should parse Leafs and CommentDefs", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        const mdv = defineXml.odm.study.metaDataVersion;
        expect(mdv.leafs).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.leafsOrder)).toBe(true);
        expect(mdv.commentDefs).toBeInstanceOf(Object);
        expect(Array.isArray(mdv.commentDefsOrder)).toBe(true);
    });

    it("should return xml information", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        const xml = defineXml.xml;
        expect(xml).toMatchSnapshot();
    });

    it("should return stylesheet information", async () => {
        const defineXml = await parseDefineXml(xmlStringAdam);
        const styleSheet = defineXml.styleSheet;
        expect(styleSheet).toMatchSnapshot();
    });

    describe("SDTM Snapshots", () => {
        let mdv: MetaDataVersion;
        beforeAll(async () => {
            const defineXml = await parseDefineXml(xmlStringSdtm);
            mdv = defineXml.odm.study.metaDataVersion;
        });

        it("should match AE itemGroupDef snapshot", () => {
            const ds = mdv.itemGroupDefs["IG.AE"];
            expect(ds).toMatchSnapshot();
        });

        it("should match AESTDY itemDef snapshot", () => {
            const variable = mdv.itemDefs["IT.AE.AESTDY"];
            expect(variable).toMatchSnapshot();
        });

        it("should match method MT.USUBJID snapshot", () => {
            const method = mdv.methodDefs?.["MT.USUBJID"];
            expect(method).toMatchSnapshot();
        });

        it("should match comment COM.DOMAIN.DM snapshot", () => {
            const comment = mdv.commentDefs?.["COM.DOMAIN.DM"];
            expect(comment).toMatchSnapshot();
        });

        it("should match code list CL.EPOCH snapshot", () => {
            const codeList = mdv.codeLists?.["CL.EPOCH"];
            expect(codeList).toMatchSnapshot();
        });

        it("should match external code list CL.AEDICT_F snapshot", () => {
            const externalCodeList = mdv.codeLists?.["CL.AEDICT_F"];
            expect(externalCodeList).toMatchSnapshot();
        });
    });

    describe("ADaM Snapshots", () => {
        let mdv: MetaDataVersion;
        beforeAll(async () => {
            const defineXml = await parseDefineXml(xmlStringAdam);
            mdv = defineXml.odm.study.metaDataVersion;
        });

        it("should match ADSL itemGroupDef snapshot", () => {
            const ds = mdv.itemGroupDefs["IG.ADSL"];
            expect(ds).toMatchSnapshot();
        });

        it("should match ADQSADAS.AVAL itemDef snapshot", () => {
            const variable = mdv.itemDefs["IT.ADQSADAS.AVAL"];
            expect(variable).toMatchSnapshot();
        });

        it("should match ADQSADAS.TRTSDT itemDef snapshot", () => {
            const variableWithFormat = mdv.itemDefs["IT.ADQSADAS.TRTSDT"];
            expect(variableWithFormat).toMatchSnapshot();
        });

        it("should match whereClause WC.ADQSADAS.AVAL.ACITM01-ACITM14 snapshot", () => {
            const whereClause = mdv.whereClauseDefs?.["WC.ADQSADAS.AVAL.ACITM01-ACITM14"];
            expect(whereClause).toMatchSnapshot();
        });

        it("should match valueList VL.ADQSADAS.AVAL snapshot", () => {
            const valueList = mdv.valueListDefs?.["VL.ADQSADAS.AVAL"];
            expect(valueList).toMatchSnapshot();
        });

        it("should match leaf LF.ADRG snapshot", () => {
            const leaf = mdv.leafs?.["LF.ADRG"];
            expect(leaf).toMatchSnapshot();
        });
    });

    it("should throw error for invalid XML", async () => {
        await expect(parseDefineXml("<notxml>")).rejects.toThrow("XML parsing failed");
    });

    it("should throw error for missing ODM root", async () => {
        const badXml = "<root></root>";
        await expect(parseDefineXml(badXml)).rejects.toThrow("Invalid Define-XML structure: missing ODM root element");
    });
});
