// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Define-XML 2.0 Parser ADaM Snapshots should match ADQSADAS.AVAL itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Analysis Value",
      "xml_lang": "en",
    },
  ],
  "length": 8,
  "name": "AVAL",
  "oid": "IT.ADQSADAS.AVAL",
  "sasFieldName": "AVAL",
  "valueListRef": "VL.ADQSADAS.AVAL",
}
`;

exports[`Define-XML 2.0 Parser ADaM Snapshots should match ADQSADAS.TRTSDT itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Date of First Exposure to Treatment",
      "xml_lang": "en",
    },
  ],
  "displayFormat": "date9.",
  "length": 8,
  "name": "TRTSDT",
  "oid": "IT.ADQSADAS.TRTSDT",
  "origin": {
    "descriptions": [
      {
        "value": "ADSL.TRTSDT",
        "xml_lang": "en",
      },
    ],
    "type": "Predecessor",
  },
  "sasFieldName": "TRTSDT",
}
`;

exports[`Define-XML 2.0 Parser ADaM Snapshots should match ADSL itemGroupDef snapshot 1`] = `
{
  "archiveLocationId": "LF.ADSL",
  "class": "SUBJECT LEVEL ANALYSIS DATASET",
  "commentOid": "COM.ADSL",
  "description": [
    {
      "value": "Subject-Level Analysis",
      "xml_lang": "en",
    },
  ],
  "isReferenceData": "No",
  "itemRefs": {
    "IT.ADSL.AGE": {
      "itemOid": "IT.ADSL.AGE",
      "mandatory": "No",
      "orderNumber": 16,
    },
    "IT.ADSL.AGEGR1": {
      "itemOid": "IT.ADSL.AGEGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.AGEGR1",
      "orderNumber": 17,
    },
    "IT.ADSL.AGEGR1N": {
      "itemOid": "IT.ADSL.AGEGR1N",
      "mandatory": "No",
      "orderNumber": 18,
    },
    "IT.ADSL.AGEU": {
      "itemOid": "IT.ADSL.AGEU",
      "mandatory": "No",
      "orderNumber": 19,
    },
    "IT.ADSL.ARM": {
      "itemOid": "IT.ADSL.ARM",
      "mandatory": "No",
      "orderNumber": 6,
    },
    "IT.ADSL.AVGDD": {
      "itemOid": "IT.ADSL.AVGDD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.AVGDD",
      "orderNumber": 14,
    },
    "IT.ADSL.BMIBL": {
      "itemOid": "IT.ADSL.BMIBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.BMIBL",
      "orderNumber": 33,
    },
    "IT.ADSL.BMIBLGR1": {
      "itemOid": "IT.ADSL.BMIBLGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.BMIBLGR1",
      "orderNumber": 34,
    },
    "IT.ADSL.COMP16FL": {
      "itemOid": "IT.ADSL.COMP16FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP16FL",
      "orderNumber": 28,
    },
    "IT.ADSL.COMP24FL": {
      "itemOid": "IT.ADSL.COMP24FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP24FL",
      "orderNumber": 29,
    },
    "IT.ADSL.COMP8FL": {
      "itemOid": "IT.ADSL.COMP8FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP8FL",
      "orderNumber": 27,
    },
    "IT.ADSL.CUMDOSE": {
      "itemOid": "IT.ADSL.CUMDOSE",
      "mandatory": "No",
      "methodOid": "MT.ADSL.CUMDOSE",
      "orderNumber": 15,
    },
    "IT.ADSL.DCDECOD": {
      "itemOid": "IT.ADSL.DCDECOD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DCDECOD",
      "orderNumber": 46,
    },
    "IT.ADSL.DCREASCD": {
      "itemOid": "IT.ADSL.DCREASCD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DCREASCD",
      "orderNumber": 47,
    },
    "IT.ADSL.DISCONFL": {
      "itemOid": "IT.ADSL.DISCONFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DISCONFL",
      "orderNumber": 30,
    },
    "IT.ADSL.DISONSDT": {
      "itemOid": "IT.ADSL.DISONSDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DISONSDT",
      "orderNumber": 38,
    },
    "IT.ADSL.DSRAEFL": {
      "itemOid": "IT.ADSL.DSRAEFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DSRAEFL",
      "orderNumber": 31,
    },
    "IT.ADSL.DTHFL": {
      "itemOid": "IT.ADSL.DTHFL",
      "mandatory": "No",
      "orderNumber": 32,
    },
    "IT.ADSL.DURDIS": {
      "itemOid": "IT.ADSL.DURDIS",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DURDIS",
      "orderNumber": 39,
    },
    "IT.ADSL.DURDSGR1": {
      "itemOid": "IT.ADSL.DURDSGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DURDSGR1",
      "orderNumber": 40,
    },
    "IT.ADSL.EDUCLVL": {
      "itemOid": "IT.ADSL.EDUCLVL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.EDUCLVL",
      "orderNumber": 37,
    },
    "IT.ADSL.EFFFL": {
      "itemOid": "IT.ADSL.EFFFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.EFFFL",
      "orderNumber": 26,
    },
    "IT.ADSL.ETHNIC": {
      "itemOid": "IT.ADSL.ETHNIC",
      "mandatory": "No",
      "orderNumber": 23,
    },
    "IT.ADSL.HEIGHTBL": {
      "itemOid": "IT.ADSL.HEIGHTBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.HEIGHTBL",
      "orderNumber": 35,
    },
    "IT.ADSL.ITTFL": {
      "itemOid": "IT.ADSL.ITTFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.ITTFL",
      "orderNumber": 25,
    },
    "IT.ADSL.MMSETOT": {
      "itemOid": "IT.ADSL.MMSETOT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.MMSETOT",
      "orderNumber": 48,
    },
    "IT.ADSL.RACE": {
      "itemOid": "IT.ADSL.RACE",
      "mandatory": "No",
      "orderNumber": 20,
    },
    "IT.ADSL.RACEN": {
      "itemOid": "IT.ADSL.RACEN",
      "mandatory": "No",
      "orderNumber": 21,
    },
    "IT.ADSL.RFENDT": {
      "itemOid": "IT.ADSL.RFENDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.RFENDT",
      "orderNumber": 45,
    },
    "IT.ADSL.RFENDTC": {
      "itemOid": "IT.ADSL.RFENDTC",
      "mandatory": "No",
      "orderNumber": 43,
    },
    "IT.ADSL.RFSTDTC": {
      "itemOid": "IT.ADSL.RFSTDTC",
      "mandatory": "No",
      "orderNumber": 42,
    },
    "IT.ADSL.SAFFL": {
      "itemOid": "IT.ADSL.SAFFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.SAFFL",
      "orderNumber": 24,
    },
    "IT.ADSL.SEX": {
      "itemOid": "IT.ADSL.SEX",
      "mandatory": "No",
      "orderNumber": 22,
    },
    "IT.ADSL.SITEGR1": {
      "itemOid": "IT.ADSL.SITEGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.SITEGR1",
      "orderNumber": 5,
    },
    "IT.ADSL.SITEID": {
      "itemOid": "IT.ADSL.SITEID",
      "mandatory": "No",
      "orderNumber": 4,
    },
    "IT.ADSL.STUDYID": {
      "itemOid": "IT.ADSL.STUDYID",
      "mandatory": "No",
      "orderNumber": 1,
    },
    "IT.ADSL.SUBJID": {
      "itemOid": "IT.ADSL.SUBJID",
      "mandatory": "No",
      "orderNumber": 3,
    },
    "IT.ADSL.TRT01A": {
      "itemOid": "IT.ADSL.TRT01A",
      "mandatory": "No",
      "orderNumber": 9,
    },
    "IT.ADSL.TRT01AN": {
      "itemOid": "IT.ADSL.TRT01AN",
      "mandatory": "No",
      "orderNumber": 10,
    },
    "IT.ADSL.TRT01P": {
      "itemOid": "IT.ADSL.TRT01P",
      "mandatory": "No",
      "orderNumber": 7,
    },
    "IT.ADSL.TRT01PN": {
      "itemOid": "IT.ADSL.TRT01PN",
      "mandatory": "No",
      "orderNumber": 8,
    },
    "IT.ADSL.TRTDUR": {
      "itemOid": "IT.ADSL.TRTDUR",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTDUR",
      "orderNumber": 13,
    },
    "IT.ADSL.TRTEDT": {
      "itemOid": "IT.ADSL.TRTEDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTEDT",
      "orderNumber": 12,
    },
    "IT.ADSL.TRTSDT": {
      "itemOid": "IT.ADSL.TRTSDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTSDT",
      "orderNumber": 11,
    },
    "IT.ADSL.USUBJID": {
      "itemOid": "IT.ADSL.USUBJID",
      "keySequence": 1,
      "mandatory": "No",
      "orderNumber": 2,
    },
    "IT.ADSL.VISIT1DT": {
      "itemOid": "IT.ADSL.VISIT1DT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.VISIT1DT",
      "orderNumber": 41,
    },
    "IT.ADSL.VISNUMEN": {
      "itemOid": "IT.ADSL.VISNUMEN",
      "mandatory": "No",
      "methodOid": "MT.ADSL.VISNUMEN",
      "orderNumber": 44,
    },
    "IT.ADSL.WEIGHTBL": {
      "itemOid": "IT.ADSL.WEIGHTBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.WEIGHTBL",
      "orderNumber": 36,
    },
  },
  "itemRefsOrder": [
    "IT.ADSL.STUDYID",
    "IT.ADSL.USUBJID",
    "IT.ADSL.SUBJID",
    "IT.ADSL.SITEID",
    "IT.ADSL.SITEGR1",
    "IT.ADSL.ARM",
    "IT.ADSL.TRT01P",
    "IT.ADSL.TRT01PN",
    "IT.ADSL.TRT01A",
    "IT.ADSL.TRT01AN",
    "IT.ADSL.TRTSDT",
    "IT.ADSL.TRTEDT",
    "IT.ADSL.TRTDUR",
    "IT.ADSL.AVGDD",
    "IT.ADSL.CUMDOSE",
    "IT.ADSL.AGE",
    "IT.ADSL.AGEGR1",
    "IT.ADSL.AGEGR1N",
    "IT.ADSL.AGEU",
    "IT.ADSL.RACE",
    "IT.ADSL.RACEN",
    "IT.ADSL.SEX",
    "IT.ADSL.ETHNIC",
    "IT.ADSL.SAFFL",
    "IT.ADSL.ITTFL",
    "IT.ADSL.EFFFL",
    "IT.ADSL.COMP8FL",
    "IT.ADSL.COMP16FL",
    "IT.ADSL.COMP24FL",
    "IT.ADSL.DISCONFL",
    "IT.ADSL.DSRAEFL",
    "IT.ADSL.DTHFL",
    "IT.ADSL.BMIBL",
    "IT.ADSL.BMIBLGR1",
    "IT.ADSL.HEIGHTBL",
    "IT.ADSL.WEIGHTBL",
    "IT.ADSL.EDUCLVL",
    "IT.ADSL.DISONSDT",
    "IT.ADSL.DURDIS",
    "IT.ADSL.DURDSGR1",
    "IT.ADSL.VISIT1DT",
    "IT.ADSL.RFSTDTC",
    "IT.ADSL.RFENDTC",
    "IT.ADSL.VISNUMEN",
    "IT.ADSL.RFENDT",
    "IT.ADSL.DCDECOD",
    "IT.ADSL.DCREASCD",
    "IT.ADSL.MMSETOT",
  ],
  "leaf": {
    "id": "LF.ADSL",
    "title": "adsl.xpt ",
    "xlink_href": "adsl.xpt",
  },
  "name": "ADSL",
  "oid": "IG.ADSL",
  "purpose": "Analysis",
  "repeating": "No",
  "sasDatasetName": "ADSL",
  "structure": "one record per subject",
}
`;

exports[`Define-XML 2.0 Parser ADaM Snapshots should match leaf LF.ADRG snapshot 1`] = `
{
  "id": "LF.ADRG",
  "title": "Analysis Data Reviewer's Guide",
  "xlink_href": "analysis-data-reviewers-guide.pdf",
}
`;

exports[`Define-XML 2.0 Parser ADaM Snapshots should match valueList VL.ADQSADAS.AVAL snapshot 1`] = `
{
  "itemRefs": {
    "IT.ADQSADAS.AVAL.ACITM01-ACITM14": {
      "itemOid": "IT.ADQSADAS.AVAL.ACITM01-ACITM14",
      "mandatory": "No",
      "methodOid": "MT.ADQSADAS.AVAL.ACITM01-ACITM14",
    },
    "IT.ADQSADAS.AVAL.ACTOT": {
      "itemOid": "IT.ADQSADAS.AVAL.ACTOT",
      "mandatory": "No",
      "methodOid": "MT.ADQSADAS.AVAL.ACTOT",
    },
  },
  "itemRefsOrder": [
    "IT.ADQSADAS.AVAL.ACITM01-ACITM14",
    "IT.ADQSADAS.AVAL.ACTOT",
  ],
  "oid": "VL.ADQSADAS.AVAL",
}
`;

exports[`Define-XML 2.0 Parser ADaM Snapshots should match whereClause WC.ADQSADAS.AVAL.ACITM01-ACITM14 snapshot 1`] = `
{
  "oid": "WC.ADQSADAS.AVAL.ACITM01-ACITM14",
  "rangeChecks": [
    {
      "checkValues": [
        "ACITM01",
        "ACITM02",
        "ACITM03",
        "ACITM04",
        "ACITM05",
        "ACITM06",
        "ACITM07",
        "ACITM08",
        "ACITM09",
        "ACITM10",
        "ACITM11",
        "ACITM12",
        "ACITM13",
        "ACITM14",
      ],
      "comparator": "IN",
      "itemOid": "IT.ADQSADAS.PARAMCD",
      "softHard": "Soft",
    },
  ],
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match AE itemGroupDef snapshot 1`] = `
{
  "archiveLocationId": "LF.AE",
  "class": "EVENTS",
  "description": [
    {
      "value": "Adverse Events",
      "xml_lang": "en",
    },
  ],
  "domain": "AE",
  "isReferenceData": "No",
  "itemRefs": {
    "IT.AE.AEACN": {
      "itemOid": "IT.AE.AEACN",
      "mandatory": "Yes",
      "orderNumber": 12,
    },
    "IT.AE.AEBODSYS": {
      "itemOid": "IT.AE.AEBODSYS",
      "mandatory": "No",
      "orderNumber": 9,
    },
    "IT.AE.AEDECOD": {
      "itemOid": "IT.AE.AEDECOD",
      "keySequence": 3,
      "mandatory": "Yes",
      "orderNumber": 8,
    },
    "IT.AE.AEENDTC": {
      "itemOid": "IT.AE.AEENDTC",
      "mandatory": "No",
      "orderNumber": 15,
    },
    "IT.AE.AEENDY": {
      "itemOid": "IT.AE.AEENDY",
      "mandatory": "No",
      "methodOid": "MT.AEENDY",
      "orderNumber": 17,
    },
    "IT.AE.AEENRF": {
      "itemOid": "IT.AE.AEENRF",
      "mandatory": "No",
      "orderNumber": 18,
    },
    "IT.AE.AEMODIFY": {
      "itemOid": "IT.AE.AEMODIFY",
      "mandatory": "No",
      "orderNumber": 7,
    },
    "IT.AE.AEREL": {
      "itemOid": "IT.AE.AEREL",
      "mandatory": "Yes",
      "orderNumber": 13,
    },
    "IT.AE.AESEQ": {
      "itemOid": "IT.AE.AESEQ",
      "mandatory": "Yes",
      "methodOid": "MT.SEQ",
      "orderNumber": 4,
    },
    "IT.AE.AESER": {
      "itemOid": "IT.AE.AESER",
      "mandatory": "Yes",
      "orderNumber": 11,
    },
    "IT.AE.AESEV": {
      "itemOid": "IT.AE.AESEV",
      "mandatory": "Yes",
      "orderNumber": 10,
    },
    "IT.AE.AESPID": {
      "itemOid": "IT.AE.AESPID",
      "mandatory": "No",
      "orderNumber": 5,
    },
    "IT.AE.AESTDTC": {
      "itemOid": "IT.AE.AESTDTC",
      "keySequence": 4,
      "mandatory": "No",
      "orderNumber": 14,
    },
    "IT.AE.AESTDY": {
      "itemOid": "IT.AE.AESTDY",
      "mandatory": "No",
      "methodOid": "MT.AESTDY",
      "orderNumber": 16,
    },
    "IT.AE.AETERM": {
      "itemOid": "IT.AE.AETERM",
      "mandatory": "Yes",
      "orderNumber": 6,
    },
    "IT.AE.DOMAIN": {
      "itemOid": "IT.AE.DOMAIN",
      "mandatory": "Yes",
      "orderNumber": 2,
    },
    "IT.STUDYID": {
      "itemOid": "IT.STUDYID",
      "keySequence": 1,
      "mandatory": "Yes",
      "orderNumber": 1,
    },
    "IT.USUBJID": {
      "itemOid": "IT.USUBJID",
      "keySequence": 2,
      "mandatory": "Yes",
      "methodOid": "MT.USUBJID",
      "orderNumber": 3,
    },
  },
  "itemRefsOrder": [
    "IT.STUDYID",
    "IT.AE.DOMAIN",
    "IT.USUBJID",
    "IT.AE.AESEQ",
    "IT.AE.AESPID",
    "IT.AE.AETERM",
    "IT.AE.AEMODIFY",
    "IT.AE.AEDECOD",
    "IT.AE.AEBODSYS",
    "IT.AE.AESEV",
    "IT.AE.AESER",
    "IT.AE.AEACN",
    "IT.AE.AEREL",
    "IT.AE.AESTDTC",
    "IT.AE.AEENDTC",
    "IT.AE.AESTDY",
    "IT.AE.AEENDY",
    "IT.AE.AEENRF",
  ],
  "leaf": {
    "id": "LF.AE",
    "title": "ae.xpt",
    "xlink_href": "ae.xpt",
  },
  "name": "AE",
  "oid": "IG.AE",
  "purpose": "Tabulation",
  "repeating": "Yes",
  "sasDatasetName": "AE",
  "structure": "One record per adverse event per subject",
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match AESTDY itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Study Day of Start of Adverse Event",
      "xml_lang": "en",
    },
  ],
  "length": 3,
  "name": "AESTDY",
  "oid": "IT.AE.AESTDY",
  "origin": {
    "type": "Derived",
  },
  "sasFieldName": "AESTDY",
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match code list CL.EPOCH snapshot 1`] = `
{
  "alias": [
    {
      "context": "nci:ExtCodeID",
      "name": "C99079",
    },
  ],
  "dataType": "text",
  "enumeratedItems": [
    {
      "codedValue": "SCREEN",
      "extendedValue": "Yes",
    },
    {
      "alias": [
        {
          "context": "nci:ExtCodeID",
          "name": "C49236",
        },
      ],
      "codedValue": "TREATMENT",
    },
  ],
  "name": "Epoch",
  "oid": "CL.EPOCH",
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match comment COM.DOMAIN.DM snapshot 1`] = `
{
  "descriptions": [
    {
      "value": "See Reviewer's Guide, Section 2.1 Demographics",
      "xml_lang": "en",
    },
  ],
  "documentRefs": [
    {
      "leafId": "LF.ReviewersGuide",
      "pdfPageRefs": [
        {
          "pageRefs": "section2.1",
          "type": "NamedDestination",
        },
      ],
    },
  ],
  "oid": "COM.DOMAIN.DM",
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match external code list CL.AEDICT_F snapshot 1`] = `
{
  "dataType": "text",
  "externalCodeList": {
    "dictionary": "MEDDRA",
    "version": "8.0",
  },
  "name": "Adverse Event Dictionary",
  "oid": "CL.AEDICT_F",
}
`;

exports[`Define-XML 2.0 Parser SDTM Snapshots should match method MT.USUBJID snapshot 1`] = `
{
  "descriptions": [
    {
      "value": "Concatenation of STUDYID and SUBJID",
      "xml_lang": "en",
    },
  ],
  "formalExpressions": [
    {
      "context": "SAS 9.0 or later, as part of a data step assignment or proc sql select and update statements.",
      "value": "
          catx(".",STUDYID,SUBJID)
        ",
    },
  ],
  "name": "Algorithm to derive USUBJID",
  "oid": "MT.USUBJID",
  "type": "Computation",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match ADQSADAS.AVAL itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Analysis Value",
      "xml_lang": "en",
    },
  ],
  "length": 8,
  "name": "AVAL",
  "oid": "IT.ADQSADAS.AVAL",
  "sasFieldName": "AVAL",
  "valueListRef": "VL.ADQSADAS.AVAL",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match ADQSADAS.TRTSDT itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Date of First Exposure to Treatment",
      "xml_lang": "en",
    },
  ],
  "displayFormat": "date9.",
  "length": 8,
  "name": "TRTSDT",
  "oid": "IT.ADQSADAS.TRTSDT",
  "origin": {
    "descriptions": [
      {
        "value": "ADSL.TRTSDT",
        "xml_lang": "en",
      },
    ],
    "type": "Predecessor",
  },
  "sasFieldName": "TRTSDT",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match ADSL itemGroupDef snapshot 1`] = `
{
  "archiveLocationId": "LF.ADSL",
  "class": "SUBJECT LEVEL ANALYSIS DATASET",
  "commentOid": "COM.ADSL",
  "description": [
    {
      "value": "Subject-Level Analysis",
      "xml_lang": "en",
    },
  ],
  "isReferenceData": "No",
  "itemRefs": {
    "IT.ADSL.AGE": {
      "itemOid": "IT.ADSL.AGE",
      "mandatory": "No",
      "orderNumber": 16,
    },
    "IT.ADSL.AGEGR1": {
      "itemOid": "IT.ADSL.AGEGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.AGEGR1",
      "orderNumber": 17,
    },
    "IT.ADSL.AGEGR1N": {
      "itemOid": "IT.ADSL.AGEGR1N",
      "mandatory": "No",
      "orderNumber": 18,
    },
    "IT.ADSL.AGEU": {
      "itemOid": "IT.ADSL.AGEU",
      "mandatory": "No",
      "orderNumber": 19,
    },
    "IT.ADSL.ARM": {
      "itemOid": "IT.ADSL.ARM",
      "mandatory": "No",
      "orderNumber": 6,
    },
    "IT.ADSL.AVGDD": {
      "itemOid": "IT.ADSL.AVGDD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.AVGDD",
      "orderNumber": 14,
    },
    "IT.ADSL.BMIBL": {
      "itemOid": "IT.ADSL.BMIBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.BMIBL",
      "orderNumber": 33,
    },
    "IT.ADSL.BMIBLGR1": {
      "itemOid": "IT.ADSL.BMIBLGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.BMIBLGR1",
      "orderNumber": 34,
    },
    "IT.ADSL.COMP16FL": {
      "itemOid": "IT.ADSL.COMP16FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP16FL",
      "orderNumber": 28,
    },
    "IT.ADSL.COMP24FL": {
      "itemOid": "IT.ADSL.COMP24FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP24FL",
      "orderNumber": 29,
    },
    "IT.ADSL.COMP8FL": {
      "itemOid": "IT.ADSL.COMP8FL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.COMP8FL",
      "orderNumber": 27,
    },
    "IT.ADSL.CUMDOSE": {
      "itemOid": "IT.ADSL.CUMDOSE",
      "mandatory": "No",
      "methodOid": "MT.ADSL.CUMDOSE",
      "orderNumber": 15,
    },
    "IT.ADSL.DCDECOD": {
      "itemOid": "IT.ADSL.DCDECOD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DCDECOD",
      "orderNumber": 46,
    },
    "IT.ADSL.DCREASCD": {
      "itemOid": "IT.ADSL.DCREASCD",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DCREASCD",
      "orderNumber": 47,
    },
    "IT.ADSL.DISCONFL": {
      "itemOid": "IT.ADSL.DISCONFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DISCONFL",
      "orderNumber": 30,
    },
    "IT.ADSL.DISONSDT": {
      "itemOid": "IT.ADSL.DISONSDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DISONSDT",
      "orderNumber": 38,
    },
    "IT.ADSL.DSRAEFL": {
      "itemOid": "IT.ADSL.DSRAEFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DSRAEFL",
      "orderNumber": 31,
    },
    "IT.ADSL.DTHFL": {
      "itemOid": "IT.ADSL.DTHFL",
      "mandatory": "No",
      "orderNumber": 32,
    },
    "IT.ADSL.DURDIS": {
      "itemOid": "IT.ADSL.DURDIS",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DURDIS",
      "orderNumber": 39,
    },
    "IT.ADSL.DURDSGR1": {
      "itemOid": "IT.ADSL.DURDSGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.DURDSGR1",
      "orderNumber": 40,
    },
    "IT.ADSL.EDUCLVL": {
      "itemOid": "IT.ADSL.EDUCLVL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.EDUCLVL",
      "orderNumber": 37,
    },
    "IT.ADSL.EFFFL": {
      "itemOid": "IT.ADSL.EFFFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.EFFFL",
      "orderNumber": 26,
    },
    "IT.ADSL.ETHNIC": {
      "itemOid": "IT.ADSL.ETHNIC",
      "mandatory": "No",
      "orderNumber": 23,
    },
    "IT.ADSL.HEIGHTBL": {
      "itemOid": "IT.ADSL.HEIGHTBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.HEIGHTBL",
      "orderNumber": 35,
    },
    "IT.ADSL.ITTFL": {
      "itemOid": "IT.ADSL.ITTFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.ITTFL",
      "orderNumber": 25,
    },
    "IT.ADSL.MMSETOT": {
      "itemOid": "IT.ADSL.MMSETOT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.MMSETOT",
      "orderNumber": 48,
    },
    "IT.ADSL.RACE": {
      "itemOid": "IT.ADSL.RACE",
      "mandatory": "No",
      "orderNumber": 20,
    },
    "IT.ADSL.RACEN": {
      "itemOid": "IT.ADSL.RACEN",
      "mandatory": "No",
      "orderNumber": 21,
    },
    "IT.ADSL.RFENDT": {
      "itemOid": "IT.ADSL.RFENDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.RFENDT",
      "orderNumber": 45,
    },
    "IT.ADSL.RFENDTC": {
      "itemOid": "IT.ADSL.RFENDTC",
      "mandatory": "No",
      "orderNumber": 43,
    },
    "IT.ADSL.RFSTDTC": {
      "itemOid": "IT.ADSL.RFSTDTC",
      "mandatory": "No",
      "orderNumber": 42,
    },
    "IT.ADSL.SAFFL": {
      "itemOid": "IT.ADSL.SAFFL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.SAFFL",
      "orderNumber": 24,
    },
    "IT.ADSL.SEX": {
      "itemOid": "IT.ADSL.SEX",
      "mandatory": "No",
      "orderNumber": 22,
    },
    "IT.ADSL.SITEGR1": {
      "itemOid": "IT.ADSL.SITEGR1",
      "mandatory": "No",
      "methodOid": "MT.ADSL.SITEGR1",
      "orderNumber": 5,
    },
    "IT.ADSL.SITEID": {
      "itemOid": "IT.ADSL.SITEID",
      "mandatory": "No",
      "orderNumber": 4,
    },
    "IT.ADSL.STUDYID": {
      "itemOid": "IT.ADSL.STUDYID",
      "mandatory": "No",
      "orderNumber": 1,
    },
    "IT.ADSL.SUBJID": {
      "itemOid": "IT.ADSL.SUBJID",
      "mandatory": "No",
      "orderNumber": 3,
    },
    "IT.ADSL.TRT01A": {
      "itemOid": "IT.ADSL.TRT01A",
      "mandatory": "No",
      "orderNumber": 9,
    },
    "IT.ADSL.TRT01AN": {
      "itemOid": "IT.ADSL.TRT01AN",
      "mandatory": "No",
      "orderNumber": 10,
    },
    "IT.ADSL.TRT01P": {
      "itemOid": "IT.ADSL.TRT01P",
      "mandatory": "No",
      "orderNumber": 7,
    },
    "IT.ADSL.TRT01PN": {
      "itemOid": "IT.ADSL.TRT01PN",
      "mandatory": "No",
      "orderNumber": 8,
    },
    "IT.ADSL.TRTDUR": {
      "itemOid": "IT.ADSL.TRTDUR",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTDUR",
      "orderNumber": 13,
    },
    "IT.ADSL.TRTEDT": {
      "itemOid": "IT.ADSL.TRTEDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTEDT",
      "orderNumber": 12,
    },
    "IT.ADSL.TRTSDT": {
      "itemOid": "IT.ADSL.TRTSDT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.TRTSDT",
      "orderNumber": 11,
    },
    "IT.ADSL.USUBJID": {
      "itemOid": "IT.ADSL.USUBJID",
      "keySequence": 1,
      "mandatory": "No",
      "orderNumber": 2,
    },
    "IT.ADSL.VISIT1DT": {
      "itemOid": "IT.ADSL.VISIT1DT",
      "mandatory": "No",
      "methodOid": "MT.ADSL.VISIT1DT",
      "orderNumber": 41,
    },
    "IT.ADSL.VISNUMEN": {
      "itemOid": "IT.ADSL.VISNUMEN",
      "mandatory": "No",
      "methodOid": "MT.ADSL.VISNUMEN",
      "orderNumber": 44,
    },
    "IT.ADSL.WEIGHTBL": {
      "itemOid": "IT.ADSL.WEIGHTBL",
      "mandatory": "No",
      "methodOid": "MT.ADSL.WEIGHTBL",
      "orderNumber": 36,
    },
  },
  "itemRefsOrder": [
    "IT.ADSL.STUDYID",
    "IT.ADSL.USUBJID",
    "IT.ADSL.SUBJID",
    "IT.ADSL.SITEID",
    "IT.ADSL.SITEGR1",
    "IT.ADSL.ARM",
    "IT.ADSL.TRT01P",
    "IT.ADSL.TRT01PN",
    "IT.ADSL.TRT01A",
    "IT.ADSL.TRT01AN",
    "IT.ADSL.TRTSDT",
    "IT.ADSL.TRTEDT",
    "IT.ADSL.TRTDUR",
    "IT.ADSL.AVGDD",
    "IT.ADSL.CUMDOSE",
    "IT.ADSL.AGE",
    "IT.ADSL.AGEGR1",
    "IT.ADSL.AGEGR1N",
    "IT.ADSL.AGEU",
    "IT.ADSL.RACE",
    "IT.ADSL.RACEN",
    "IT.ADSL.SEX",
    "IT.ADSL.ETHNIC",
    "IT.ADSL.SAFFL",
    "IT.ADSL.ITTFL",
    "IT.ADSL.EFFFL",
    "IT.ADSL.COMP8FL",
    "IT.ADSL.COMP16FL",
    "IT.ADSL.COMP24FL",
    "IT.ADSL.DISCONFL",
    "IT.ADSL.DSRAEFL",
    "IT.ADSL.DTHFL",
    "IT.ADSL.BMIBL",
    "IT.ADSL.BMIBLGR1",
    "IT.ADSL.HEIGHTBL",
    "IT.ADSL.WEIGHTBL",
    "IT.ADSL.EDUCLVL",
    "IT.ADSL.DISONSDT",
    "IT.ADSL.DURDIS",
    "IT.ADSL.DURDSGR1",
    "IT.ADSL.VISIT1DT",
    "IT.ADSL.RFSTDTC",
    "IT.ADSL.RFENDTC",
    "IT.ADSL.VISNUMEN",
    "IT.ADSL.RFENDT",
    "IT.ADSL.DCDECOD",
    "IT.ADSL.DCREASCD",
    "IT.ADSL.MMSETOT",
  ],
  "leaf": {
    "id": "LF.ADSL",
    "title": "adsl.xpt ",
    "xlink_href": "adsl.xpt",
  },
  "name": "ADSL",
  "oid": "IG.ADSL",
  "purpose": "Analysis",
  "repeating": "No",
  "sasDatasetName": "ADSL",
  "structure": "one record per subject",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match leaf LF.ADRG snapshot 1`] = `
{
  "id": "LF.ADRG",
  "title": "Analysis Data Reviewer's Guide",
  "xlink_href": "analysis-data-reviewers-guide.pdf",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match valueList VL.ADQSADAS.AVAL snapshot 1`] = `
{
  "itemRefs": {
    "IT.ADQSADAS.AVAL.ACITM01-ACITM14": {
      "itemOid": "IT.ADQSADAS.AVAL.ACITM01-ACITM14",
      "mandatory": "No",
      "methodOid": "MT.ADQSADAS.AVAL.ACITM01-ACITM14",
    },
    "IT.ADQSADAS.AVAL.ACTOT": {
      "itemOid": "IT.ADQSADAS.AVAL.ACTOT",
      "mandatory": "No",
      "methodOid": "MT.ADQSADAS.AVAL.ACTOT",
    },
  },
  "itemRefsOrder": [
    "IT.ADQSADAS.AVAL.ACITM01-ACITM14",
    "IT.ADQSADAS.AVAL.ACTOT",
  ],
  "oid": "VL.ADQSADAS.AVAL",
}
`;

exports[`Define-XML Parser ADaM Snapshots should match whereClause WC.ADQSADAS.AVAL.ACITM01-ACITM14 snapshot 1`] = `
{
  "oid": "WC.ADQSADAS.AVAL.ACITM01-ACITM14",
  "rangeChecks": [
    {
      "checkValues": [
        "ACITM01",
        "ACITM02",
        "ACITM03",
        "ACITM04",
        "ACITM05",
        "ACITM06",
        "ACITM07",
        "ACITM08",
        "ACITM09",
        "ACITM10",
        "ACITM11",
        "ACITM12",
        "ACITM13",
        "ACITM14",
      ],
      "comparator": "IN",
      "itemOid": "IT.ADQSADAS.PARAMCD",
      "softHard": "Soft",
    },
  ],
}
`;

exports[`Define-XML Parser SDTM Snapshots should match AE itemGroupDef snapshot 1`] = `
{
  "archiveLocationId": "LF.AE",
  "class": "EVENTS",
  "description": [
    {
      "value": "Adverse Events",
      "xml_lang": "en",
    },
  ],
  "domain": "AE",
  "isReferenceData": "No",
  "itemRefs": {
    "IT.AE.AEACN": {
      "itemOid": "IT.AE.AEACN",
      "mandatory": "Yes",
      "orderNumber": 12,
    },
    "IT.AE.AEBODSYS": {
      "itemOid": "IT.AE.AEBODSYS",
      "mandatory": "No",
      "orderNumber": 9,
    },
    "IT.AE.AEDECOD": {
      "itemOid": "IT.AE.AEDECOD",
      "keySequence": 3,
      "mandatory": "Yes",
      "orderNumber": 8,
    },
    "IT.AE.AEENDTC": {
      "itemOid": "IT.AE.AEENDTC",
      "mandatory": "No",
      "orderNumber": 15,
    },
    "IT.AE.AEENDY": {
      "itemOid": "IT.AE.AEENDY",
      "mandatory": "No",
      "methodOid": "MT.AEENDY",
      "orderNumber": 17,
    },
    "IT.AE.AEENRF": {
      "itemOid": "IT.AE.AEENRF",
      "mandatory": "No",
      "orderNumber": 18,
    },
    "IT.AE.AEMODIFY": {
      "itemOid": "IT.AE.AEMODIFY",
      "mandatory": "No",
      "orderNumber": 7,
    },
    "IT.AE.AEREL": {
      "itemOid": "IT.AE.AEREL",
      "mandatory": "Yes",
      "orderNumber": 13,
    },
    "IT.AE.AESEQ": {
      "itemOid": "IT.AE.AESEQ",
      "mandatory": "Yes",
      "methodOid": "MT.SEQ",
      "orderNumber": 4,
    },
    "IT.AE.AESER": {
      "itemOid": "IT.AE.AESER",
      "mandatory": "Yes",
      "orderNumber": 11,
    },
    "IT.AE.AESEV": {
      "itemOid": "IT.AE.AESEV",
      "mandatory": "Yes",
      "orderNumber": 10,
    },
    "IT.AE.AESPID": {
      "itemOid": "IT.AE.AESPID",
      "mandatory": "No",
      "orderNumber": 5,
    },
    "IT.AE.AESTDTC": {
      "itemOid": "IT.AE.AESTDTC",
      "keySequence": 4,
      "mandatory": "No",
      "orderNumber": 14,
    },
    "IT.AE.AESTDY": {
      "itemOid": "IT.AE.AESTDY",
      "mandatory": "No",
      "methodOid": "MT.AESTDY",
      "orderNumber": 16,
    },
    "IT.AE.AETERM": {
      "itemOid": "IT.AE.AETERM",
      "mandatory": "Yes",
      "orderNumber": 6,
    },
    "IT.AE.DOMAIN": {
      "itemOid": "IT.AE.DOMAIN",
      "mandatory": "Yes",
      "orderNumber": 2,
    },
    "IT.STUDYID": {
      "itemOid": "IT.STUDYID",
      "keySequence": 1,
      "mandatory": "Yes",
      "orderNumber": 1,
    },
    "IT.USUBJID": {
      "itemOid": "IT.USUBJID",
      "keySequence": 2,
      "mandatory": "Yes",
      "methodOid": "MT.USUBJID",
      "orderNumber": 3,
    },
  },
  "itemRefsOrder": [
    "IT.STUDYID",
    "IT.AE.DOMAIN",
    "IT.USUBJID",
    "IT.AE.AESEQ",
    "IT.AE.AESPID",
    "IT.AE.AETERM",
    "IT.AE.AEMODIFY",
    "IT.AE.AEDECOD",
    "IT.AE.AEBODSYS",
    "IT.AE.AESEV",
    "IT.AE.AESER",
    "IT.AE.AEACN",
    "IT.AE.AEREL",
    "IT.AE.AESTDTC",
    "IT.AE.AEENDTC",
    "IT.AE.AESTDY",
    "IT.AE.AEENDY",
    "IT.AE.AEENRF",
  ],
  "leaf": {
    "id": "LF.AE",
    "title": "ae.xpt",
    "xlink_href": "ae.xpt",
  },
  "name": "AE",
  "oid": "IG.AE",
  "purpose": "Tabulation",
  "repeating": "Yes",
  "sasDatasetName": "AE",
  "structure": "One record per adverse event per subject",
}
`;

exports[`Define-XML Parser SDTM Snapshots should match AESTDY itemDef snapshot 1`] = `
{
  "dataType": "integer",
  "description": [
    {
      "value": "Study Day of Start of Adverse Event",
      "xml_lang": "en",
    },
  ],
  "length": 3,
  "name": "AESTDY",
  "oid": "IT.AE.AESTDY",
  "origin": {
    "type": "Derived",
  },
  "sasFieldName": "AESTDY",
}
`;

exports[`Define-XML Parser SDTM Snapshots should match code list CL.EPOCH snapshot 1`] = `
{
  "alias": [
    {
      "context": "nci:ExtCodeID",
      "name": "C99079",
    },
  ],
  "dataType": "text",
  "enumeratedItems": [
    {
      "codedValue": "SCREEN",
      "extendedValue": "Yes",
    },
    {
      "alias": [
        {
          "context": "nci:ExtCodeID",
          "name": "C49236",
        },
      ],
      "codedValue": "TREATMENT",
    },
  ],
  "name": "Epoch",
  "oid": "CL.EPOCH",
}
`;

exports[`Define-XML Parser SDTM Snapshots should match comment COM.DOMAIN.DM snapshot 1`] = `
{
  "descriptions": [
    {
      "value": "See Reviewer's Guide, Section 2.1 Demographics",
      "xml_lang": "en",
    },
  ],
  "documentRefs": [
    {
      "leafId": "LF.ReviewersGuide",
      "pdfPageRefs": [
        {
          "pageRefs": "section2.1",
          "type": "NamedDestination",
        },
      ],
    },
  ],
  "oid": "COM.DOMAIN.DM",
}
`;

exports[`Define-XML Parser SDTM Snapshots should match external code list CL.AEDICT_F snapshot 1`] = `
{
  "dataType": "text",
  "externalCodeList": {
    "dictionary": "MEDDRA",
    "href": undefined,
    "ref": undefined,
    "version": "8.0",
  },
  "name": "Adverse Event Dictionary",
  "oid": "CL.AEDICT_F",
}
`;

exports[`Define-XML Parser SDTM Snapshots should match method MT.USUBJID snapshot 1`] = `
{
  "descriptions": [
    {
      "value": "Concatenation of STUDYID and SUBJID",
      "xml_lang": "en",
    },
  ],
  "formalExpressions": [
    {
      "context": "SAS 9.0 or later, as part of a data step assignment or proc sql select and update statements.",
      "value": "
          catx(".",STUDYID,SUBJID)
        ",
    },
  ],
  "name": "Algorithm to derive USUBJID",
  "oid": "MT.USUBJID",
  "type": "Computation",
}
`;
